# cgpbot

./: .gitignore  .gitmodules  CMakeLists.txt  OPTIMIZATION_NOTES.md  README.md  TEST_GENERATION_PLAN.md  test_server.sh  train_tile_model.py
models/: tile_model.onnx  tile_model_best.pt
src/: board.cpp  board.h  cell_hsv.cpp  color_survey.cpp  eval_local.cpp  extract_label_crops.cpp  extract_rack_crops.cpp  gemini_parse.h  main.cpp  occ_diag.cpp  occ_test.cpp  rack.cpp  rack.h  testapp.cpp
testcases/: expected.txt  gemini_flies_78cells_debug.txt  gemini_flies_79cells_ok.txt  gemini_flies_79cells_v2.txt  gemini_frowie_83cells_ok.txt  gemini_frowie_83cells_v2.txt  gemini_frowie_rows7_8_14elems.txt  gemini_rage_85cells_ok.txt  gemini_rage_85cells_v2.txt  gemini_rage_row4_16elems.txt  gemini_vamose_85cells_ok.txt  gemini_vamose_85cells_v2.txt  gemini_vom_85cells_ok.txt  gemini_vom_85cells_v2.txt  gemini_vom_88cells_row10_14elems.txt  gemini_wilders_40cells_ok.txt  gemini_wilders_40cells_row10_14elems.txt  gemini_wilders_rows10_11_14elems.txt
testdata/: AmSAGtDHDU_t04_light_desktop.cgp  AmSAGtDHDU_t04_mahogany_desktop.cgp  AmSAGtDHDU_t06_dark_mobile.cgp  AmSAGtDHDU_t06_mahogany_desktop_tooltip_lowjpeg.cgp  AmSAGtDHDU_t09_mahogany_desktop_tooltip.cgp  AmSAGtDHDU_t09_memento.cgp  AmSAGtDHDU_t12_light_desktop_tooltip_lowjpeg.cgp  AmSAGtDHDU_t12_memento.cgp  AmSAGtDHDU_t21_dark_desktop.cgp  BzAQ3Gifu9_t04_light_mobile.cgp  BzAQ3Gifu9_t04_memento_lowjpeg.cgp  BzAQ3Gifu9_t07_light_desktop.cgp  BzAQ3Gifu9_t07_mahogany_desktop.cgp  BzAQ3Gifu9_t09_dark_mobile.cgp  BzAQ3Gifu9_t14_light_desktop.cgp  BzAQ3Gifu9_t14_light_desktop_tooltip_jpeg.cgp  BzAQ3Gifu9_t14_memento.cgp  BzAQ3Gifu9_t30_dark_desktop_tooltip.cgp  BzAQ3Gifu9_t30_light_mobile.cgp  CTDVDRDQkM_t06_light_mobile.cgp  CTDVDRDQkM_t06_memento.cgp  CTDVDRDQkM_t07_memento.cgp  CTDVDRDQkM_t10_dark_desktop.cgp  CTDVDRDQkM_t10_memento_jpeg.cgp  CTDVDRDQkM_t14_dark_mobile.cgp  CTDVDRDQkM_t14_memento.cgp  CTDVDRDQkM_t19_memento.cgp  CTDVDRDQkM_t19_memento_lowjpeg.cgp  DoM4tL9vH2_t04_dark_mobile.cgp  DoM4tL9vH2_t04_dark_mobile_lowjpeg.cgp  DoM4tL9vH2_t05_dark_desktop.cgp  DoM4tL9vH2_t05_light_desktop_tooltip_lowjpeg.cgp  DoM4tL9vH2_t13_mahogany_desktop.cgp  DoM4tL9vH2_t13_memento.cgp  DoM4tL9vH2_t15_dark_mobile.cgp  DoM4tL9vH2_t15_memento.cgp  DoM4tL9vH2_t30_memento.cgp  Ju6yzk8ugd_t04_dark_desktop_tooltip.cgp  Ju6yzk8ugd_t04_memento.cgp  Ju6yzk8ugd_t06_light_mobile.cgp  (+76 more)
testgen/: README.md
testgen/gcg/: 2r8QNJNpbP.gcg  3Mez2yXn6R.gcg  43FELmTSiE.gcg  6WqAJ92vch.gcg  6ZMr5aCe2g.gcg  7uxTnDBDFp.gcg  8H4DpJDTbT.gcg  9WycAHMW7Z.gcg  A8Y8jkW87S.gcg  AmSAGtDHDU.gcg  BfiSDaVEZ4.gcg  BzAQ3Gifu9.gcg  CTDVDRDQkM.gcg  CgVqJE7qQD.gcg  DoM4tL9vH2.gcg  Dq6BECCEUo.gcg  EqkdSd4Gcv.gcg  F68dPDfjGg.gcg  GSE8CVoZAL.gcg  GTi3hXHbG4.gcg  Gjy4jxRMSW.gcg  Gww5B3nZTB.gcg  HR8onuP7G9.gcg  HfdgNM5v4i.gcg  HtK2tLfRB6.gcg  HtcwgFRALB.gcg  Hyx9vbpjZz.gcg  JcnJjZPWC5.gcg  Ju6yzk8ugd.gcg  KgmBd5Y4pD.gcg  LGjAKkLZnE.gcg  LTuiHmceLx.gcg  MAB7htzZTf.gcg  MUgR4MT4s3.gcg  NLAJPgjNPH.gcg  NLU5dyD5r9.gcg  PeEarA7jGo.gcg  R8ZMHqqvmt.gcg  RhA6ZAYfhn.gcg  (+70 more)
tests/: test_gemini_parse.cpp
(+96 files in other folders)
